fix: adjust margin and padding for calendar container on smaller screens

--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -68,16 +68,23 @@
   }
 }
 
+@media (max-width: 399px) {
+  .calendar-container {
+    margin: 8px 0px;
+    padding: 16px;
+  }
+}
+
 @media (max-width: 360px) {
   .calendar-container {
-    margin: 10px 10px;
+    margin: 10px 0px;
     padding: 10px;
   }
 }
 
 @media (max-width: 354px) {
   .calendar-container {
-    margin: 8px 8px;
+    margin: 8px 0px;
     padding: 8px;
   }
 }
